@startuml

    class Cinema {
        -Long id
        -String name
        -String address
        -String city
        -String postalCode
        -List~Room~ rooms
        +Cinema()
        +Cinema(name, address, city, postalCode)
        +getId() Long
        +setId(id) void
        +getName() String
        +setName(name) void
        +getAddress() String
        +setAddress(address) void
        +getCity() String
        +setCity(city) void
        +getPostalCode() String
        +setPostalCode(postalCode) void
        +getRooms() List~Room~
        +setRooms(rooms) void
        +toString() String
    }

    class Room {
        -Long id
        -String name
        -int capacity
        -Cinema cinema
        -List~Seat~ seats
        +Room()
        +Room(name, capacity)
        +getId() Long
        +getName() String
        +setName(name) void
        +getCapacity() int
        +setCapacity(capacity) void
        +getCinema() Cinema
        +setCinema(cinema) void
        +getSeats() List~Seat~
        +setSeats(seats) void
        +toString() String
    }

    class Seat {
        -Long id
        -int number
        -String seatRow
        -int x
        -int y
        -SeatType type
        -boolean active
        -Room room
        +Seat()
        +Seat(number, row, x, y, type)
        +getId() Long
        +getNumber() int
        +setNumber(number) void
        +getRow() String
        +setRow(seatRow) void
        +getX() int
        +setX(x) void
        +getY() int
        +setY(y) void
        +getType() SeatType
        +setType(type) void
        +isActive() boolean
        +setActive(active) void
        +getRoom() Room
        +setRoom(room) void
        +toString() String
    }

    class Movie {
        -Long id
        -String title
        -int duration
        -String genre
        -String description
        -LocalDate releaseDate
        +Movie()
        +Movie(title, duration, genre, description, releaseDate)
        +getId() Long
        +setId(id) void
        +getTitle() String
        +setTitle(title) void
        +getDuration() int
        +setDuration(duration) void
        +getGenre() String
        +setGenre(genre) void
        +getDescription() String
        +setDescription(description) void
        +getReleaseDate() LocalDate
        +setReleaseDate(releaseDate) void
    }

    class SeatType {
        <<enumeration>>
        STANDARD
        PREMIUM
        ADAPTED
    }

    Cinema "1" o-- "0..*" Room : rooms (OneToMany)
    Room "1" o-- "0..*" Seat : seats (OneToMany)
    Room "*" --> "1" Cinema : cinema (ManyToOne)
    Seat "*" --> "1" Room : room (ManyToOne)
    Seat --> SeatType : type
@enduml